# Standard-Structure

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: ----framework-request.md  ---language-request.md
.github/workflows/: greetings.yml  tweet.yml  witter-together.yml file
docs/: Adding a New Language or Framework.md  Adding a New Structure.md  Contributing to Generation CLI.md
frameworks/deno/: README.md
frameworks/deno/basic/: README.md  deps.ts  mod.ts
frameworks/flask/: README.md
frameworks/flask/basic/: README.md  main.py
frameworks/flask/basic/static/: script.js
frameworks/flask/basic/templates/: index.html
frameworks/flask/examples/basic/: app.py
frameworks/flutter/: README.md
frameworks/flutter/basic/: README.md
frameworks/gatsby/: README.md
frameworks/gatsby/starter-blog/: README.md
frameworks/jekyll/: README.md
frameworks/jekyll/basic/: README.md  index.html
frameworks/react/: README.md
frameworks/react/basic/: README.md
frameworks/spring-boot/: README.md
frameworks/spring-boot/basic/: README.md  pom.xml
frameworks/vue/: README.md
frameworks/vue/basic/: README.md  package.json
languages/dart/: README.md
languages/dart/basic/: README.md  pubspec.yaml
languages/deno/: README.md
languages/python/: README.md
languages/python/basic/: README.md  main.py
languages/rust/: README.md
languages/rust/basic/: Cargo.toml  README.md
struct-add/: README.md  pyproject.toml
struct-add/struct-add/: __main__.py  ask.py  readme.py
(+5 files in other folders)
