[tool.poetry]
name = "struct-add"
version = "0.1.0"
description = "Automation CLI for Standard-Structure"
authors = ["Matthew Gleich <matthewgleich@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pathlib = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
